[gd_scene load_steps=2 format=3 uid="uid://dialog_system_scene"]

[ext_resource type="Script" path="res://scripts/ui/DialogSystem.gd" id="1_dialog_script"]

[node name="DialogSystem" type="CanvasLayer"]
layer = 15
script = ExtResource("1_dialog_script")

[node name="DialogBox" type="PanelContainer" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -180.0
offset_right = 400.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="DialogBox"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="DialogBox/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SpeakerLabel" type="Label" parent="DialogBox/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "ORACLE"

[node name="TextLabel" type="Label" parent="DialogBox/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Dialog text akan muncul di sini dengan typing effect..."
autowrap_mode = 2

[node name="ContinueIndicator" type="Label" parent="DialogBox/MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "â–¼ Tekan SPACE untuk lanjut"
horizontal_alignment = 2
